--- a/WeChatHook/WeChatHook.rc
+++ b/WeChatHook/WeChatHook.rc
@@ -50,7 +50,7 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 309, 185
+IDD_DIALOG1 DIALOGEX 0, 0, 545, 185
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -66,6 +66,11 @@ BEGIN
     EDITTEXT        WX_ACCOUNT,68,43,199,14,ES_AUTOHSCROLL
     LTEXT           "微信昵称：",IDC_STATIC,21,119,41,8
     EDITTEXT        WX_NICK,65,117,203,14,ES_AUTOHSCROLL
+    EDITTEXT        S_WXID,345,14,126,14,ES_AUTOHSCROLL
+    EDITTEXT        S_MSG,345,39,161,84,ES_MULTILINE | ES_AUTOHSCROLL
+    LTEXT           "WXID",IDC_STATIC,319,17,19,8
+    LTEXT           "消息内容",IDC_STATIC,307,39,33,8
+    PUSHBUTTON      "发送消息",S_BTN,345,135,50,14
 END
 
 
@@ -80,7 +85,7 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 538
         TOPMARGIN, 7
         BOTTOMMARGIN, 178
     END
